--- a/package.xml
+++ b/package.xml
@@ -11,6 +11,7 @@
   <depend>sensor_msgs</depend>
   <depend>cv_bridge</depend>
   <depend>std_msgs</depend>
+  <depend>cone_msgs</depend>
 
   <exec_depend>ultralytics</exec_depend>
   <exec_depend>opencv-python</exec_depend>
